# Knary

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  FAST API.docx  LICENSE  README.md  alembic.ini  docker-compose.yaml  docker-compose.yml  poetry.toml  pyproject.toml
.github/workflows/: tests.yml
app/api/dependencies/: authentication.py  database.py
app/api/routes/: api.py  auth_route.py  authentication.py  user_route.py  users.py
app/core/: config.py
app/db/: database.py  events.py  schemas.py
app/db/repositories/: base_repository.py  user_repository.py  users.py
app/models/: common.py
app/models/domain/: rwmodel.py
app/models/schemas/: rwschema.py  user_schemas.py
app/services/: authentication.py  jwt.py
backend/: .env  alembic.ini  docker-compose.yml  requirements.txt
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.otlp.yml  docker-compose.yml
deploy/kube/: app.yml  db.yml  namespace.yml  rabbit.yml  redis.yml
knary_api/: __init__.py  __main__.py  conftest.py  gunicorn_runner.py  logging.py  settings.py  tkq.py
knary_api/db/: base.py  utils.py
knary_api/db/dao/: dummy_dao.py
knary_api/db/migrations/: env.py
knary_api/db/models/: __init__.py  dummy_model.py  users.py
knary_api/services/: __init__.py
knary_api/services/kafka/: lifetime.py
knary_api/services/rabbit/: lifetime.py
knary_api/services/redis/: lifetime.py
knary_api/tests/: __init__.py  test_dummy.py  test_kafka.py
knary_api/web/: __init__.py  application.py  lifetime.py
knary_api/web/api/: __init__.py  router.py
(+15 files in other folders)
