[tool.poetry]
name = "knary-api"
version = "0.1.0"
description = ""
authors = ["josephnomo <fulgaros@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
peewee = "^3.16.3"
databases = "^0.7.0"
loguru = "^0.7.0"
bcrypt = "^4.0.1"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^2.2.1"}
jwt = "^1.3.1"
aiomysql = "^0.2.0"
psycopg2 = "^2.9.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
